# GrinkoNet

./: README.md  pyproject.toml
config/config/: settings.py  urls.py
config/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
config/profiles/migrations/: 0001_initial.py  0002_technology_alter_usernet_email_usernet_technology.py
